# AI-Powered_Todo_Chatbot-3...

./: DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  DEPLOY_NOW.md  FINAL_FIX.md  GENERATED_FILES.txt  KUBERNETES_DEPLOYMENT.md  PHASE5_CLOUD_DEPLOYMENT.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  VERCEL_FIX.md  build.sh  package.json  vercel.json
api/: index.py  (+1 more)
backend/: DEPLOYMENT.md  Dockerfile  README.md  alembic.ini  app.py  pyproject.toml  requirements-deploy.txt  requirements.txt  run.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_auth_users_table.py  003_add_task_enhancements.py  004_add_recurring_tasks.py
backend/api/: index.py  requirements.txt
backend/src/agent/: __init__.py  agent.py  clarifiers.py  client.py  date_parser.py  extractors.py  intents.py  responses.py  tool_registry.py
backend/src/api/: __init__.py  app.py  chatbot_routes.py  models.py
backend/src/api/middleware/: __init__.py  cors.py  error_handler.py  logging.py
backend/src/api/routes/: __init__.py  auth.py  chat.py  skills.py  tasks.py
backend/src/api/services/: __init__.py  chat_service.py  conversation_service.py  message_service.py
backend/src/auth/: __init__.py  dependencies.py  jwt.py  schemas.py
backend/src/database/: engine.py
backend/src/i18n/: LANGUAGE_EXAMPLES.md  __init__.py  detector.py  translator.py
backend/src/mcp_server/: __init__.py  schemas.py  server.py
backend/src/mcp_server/tools/: __init__.py  add_task.py  complete_task.py  delete_task.py  list_tasks.py  update_task.py
backend/src/models/: __init__.py  conversation.py  message.py  task.py  user.py
backend/src/services/: chatbot.py
backend/src/skills/: __init__.py  base.py  executor.py  init_skills.py  registry.py  schemas.py
backend/src/skills/enhancement/: __init__.py  classify_category.py  prioritize_task.py  suggest_schedule.py
backend/src/skills/extraction/: __init__.py  extract_tasks.py
backend/src/utils/: recurrence.py
(+167 files in other folders)
